Closed
Bug 236028
Opened 22 years ago
Closed 22 years ago
[GTK2] MouseScroll event returns incorrect target
Categories
(Core Graveyard :: GFX: Gtk, defect)
Tracking
(Not tracked)
RESOLVED
FIXED
mozilla1.8alpha2
People
(Reporter: hachiro75, Unassigned)
Details
Attachments
(2 files)
|
673 bytes,
application/vnd.mozilla.xul+xml
|
Details | |
|
612 bytes,
patch
|
bryner
:
review+
dbaron
:
superreview+
|
Details | Diff | Splinter Review |
User-Agent:
Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.7a) Gecko/20040229
In all GTK2 widgets, MouseScroll event returns incorrect target.
Both GTK and Windows widget return correct target.
There is already a patch to fix this bug.
Reproducible: Always
Steps to Reproduce:
1. Open test_case.xul
2. Click and scroll mousewheel at the same point
Actual Results:
mouse-click returns correct target.
mouse-scroll returns incorrect target.
Expected Results:
the same target should be returned.
Comment 3•22 years ago
|
||
I've also had problems scrolling with the mouse wheel on Linux GTK2 builds.
The problem occurs on pages like http://slashdot.org that *sometimes* have
large ads across the top of the page. If the ad's width is larger than the
width of the browser window and the ad covers the upper-left corner of the
viewing area, the mouse scrollwheel gets stuck and the scrollbar must be used
to move the ad off of (0,0) before the scrollwheel works again.
The problem is indeed that *all* mouse scroll events have their coordinates
set to (0,0) so when the ad covers this point, it intercepts the mouse scroll
event preventing the mouse wheel from working properly.
I can confirm that the submitted patch fixes this problem in my build.
hachiro: Did you request a review via the "Edit" action for the patch?
If not, this bug will probably continue to be ignored...
Attachment #142604 -
Flags: review?
> hachiro: Did you request a review via the "Edit" action for the patch?
> If not, this bug will probably continue to be ignored...
OK, I did it.
I have not yet understood bugzilla's system well.
Would you tell me if there's more thing to do?
thanks for your advice.
Attachment #142604 -
Flags: review? → review?(bryner)
Comment 5•22 years ago
|
||
I tried the test case.
When I click on the description node, the alert box displays "target: description".
When I roll my mousewheel on the description node, the alert box displays
"target: undefined".
Other nodes work accordingly, as expected.
Mozilla 1.8a2 build 2004060709 under XP Pro SP1a here. I can not confirm for the
Linux os.
Updated•22 years ago
|
Attachment #142604 -
Flags: review?(bryner) → review+
Attachment #142604 -
Flags: superreview+
Fix checked in to trunk, 2004-06-08 12:33 -0700.
Thanks for the patch.
Status: UNCONFIRMED → RESOLVED
Closed: 22 years ago
Component: DOM: Events → GFX: Gtk
Resolution: --- → FIXED
Target Milestone: --- → mozilla1.8alpha2
Updated•17 years ago
|
Product: Core → Core Graveyard
You need to log in
before you can comment on or make changes to this bug.
Description
•