Set coordinates for mouse scroll events.  b=236028  Patch from <hachiro75@yahoo.co.jp>.  r=bryner  sr=dbaron